# MPMA

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
Servers/crypto-servers/: crypto_original.py
Servers/crypto-servers/Competitors/: crypto_competitor1.py  crypto_competitor2.py  crypto_competitor3.py  crypto_competitor4.py  crypto_competitor5.py
Servers/crypto-servers/DPMA/: crypto_best_description.py  crypto_best_name.py
Servers/crypto-servers/GAPMA/: crypto_au.py  crypto_em.py  crypto_ex.py  crypto_su.py
Servers/fetch-servers/: fetch_original.py
Servers/fetch-servers/Competitors/: fetch_competitor1.py  fetch_competitor2.py  fetch_competitor3.py  fetch_competitor4.py  fetch_competitor5.py
Servers/hotnews-servers/: hotnews_original.py
Servers/markdown-servers/: markdown_original.py
Servers/mcp-installer-servers/: installer_original.py
Servers/search-servers/: search_original.py
Servers/time-servers/: time_original.py
Servers/weather-servers/: weather_original.py
archive-ignore/: run_mpma_experiments.py
client/: .gitignore  __init__.py  agent.py  fastagent.config.yaml  fastagent.secrets.yaml  logging_config.py  paths.py
config/: configs  configs.yaml  models.json  queries.csv  queries.json
results/: claude_sonnet_asr_results.csv  competitor_experiment.csv  fast-agent-output.csv  gpt4o_asr_results.csv  name_experiment.csv
utils/: __init__.py  analyze_results.py  competitor_json_generator.py  ga.py  gapma_json_generator.py  manipulations.py  prompt.txt  run_all_servers.py  tool_descriptions.json
(+72 files in other folders)
