[project]
name = "MPMA"
version = "0.1.0"
description = "MCP Preference Manipulation Attack (MPMA) research code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=0.3.0",
    "mcp[cli]>=1.11.0",
    "fast-agent-mcp>=0.2.51",
]

[project.optional-dependencies]
analysis = [
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]
